# data2mif

./: CMakeLists.txt  README.md
src/: command_line_class.cpp  command_line_class.h  command_list.h  main.cpp
